# just-clipboard-manager

./: .editorconfig  .gitignore  JustClipboardManager.sln  LICENSE  README.md  ReleaseNotes.md  angular.json  app-icon.xcf  cspell.json  forge.config.ts  global.json  main.js  neutralino.config.json  package-lock.json  package.json  pad_file.xml  release-notes.md  rustfmt.toml  tsconfig.app.json  tsconfig.electron.json  tsconfig.json
.gemini/: settings.json
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  codecov-update.yml  gated.yml  gated_application.yml  gated_plugin-dev-kit.yml  geted_plugin-dev-kit.yml  release-0.0.yml  release-1.0.yml  release-2.0_application.yml  release-2.0_plugin-dev-kit.yml  release-3.0_application.yml  release-3.0_plugin-dev-kit.yml  release-3.1_application.yml  release-3.1_plugin-dev-kit.yml  release-3.2_application.yml  release-3.2_plugin-dev-kit.yml  release-application.yml  release-plugin-dev-kit.yml
.qwen/: settings.json
.tmp/: auth_info.json  window_state.config.json
InnoSetup/: Setup.iss  architecture.iss  version.iss
Plugins/Tum4ik.JustClipboardManager.PluginDevKit/: IPlugin.cs  IPluginModule.cs  Plugin.cs  PluginModule.cs  Tum4ik.JustClipboardManager.PluginDevKit.csproj
Plugins/Tum4ik.JustClipboardManager.PluginsDevKit/: IPlugin.cs  LocalizableVisualTree.cs  Plugin.cs  PluginModule.cs  Tum4ik.JustClipboardManager.PluginDevKit.csproj
Plugins/Tum4ik.JustClipboardManager.TextPlugin/: Text.cs  TextDataTemplate.xaml  TextVisualTree.xaml  Tum4ik.JustClipboardManager.TextPlugin.csproj
Plugins/_Tum4ik.JustClipboardManager.PluginsDevKit/: IPlugin.cs  _Tum4ik.JustClipboardManager.PluginDevKit.csproj
Plugins/_Tum4ik.JustClipboardManager.TextPlugin/: Text.cs  TextVisualTree.xaml  TextVisualTree.xaml.cs  _Tum4ik.JustClipboardManager.TextPlugin.csproj
SolutionProperties/: Authors.txt  Company.txt  Copyright.txt  Product.txt  SolutionProperties.targets
Tests/Tum4ik.Deployment.UnitTests/: Tum4ik.Deployment.UnitTests.csproj
Tests/Tum4ik.JustClipboardManager.UiTests/: ApplicationFixture.cs  Class1.cs  NativeMethods.txt  Tum4ik.JustClipboardManager.UiTests.csproj  Usings.cs
Tests/Tum4ik.JustClipboardManager.UnitTests/: ApplicationInstanceRequiredFixture.cs  TestCollections.cs  Tum4ik.JustClipboardManager.UnitTests.csproj
Tests/Tum4ik.TestHelpers/: StaticMemberMock.cs  Tum4ik.TestHelpers.csproj
Tum4ik.Attributes/: IIForStaticClassAttribute.cs  Tum4ik.Attributes.csproj
Tum4ik.EventAggregator/: EventAggregator.cs  EventPublisher.cs  EventSubscriber.cs  IEventAggregator.cs  IEventPublisher.cs  IEventSubscriber.cs  ThreadOption.cs  Tum4ik.EventAggregator.csproj
Tum4ik.EventAggregator/Event/: EventBase.cs  EventHandlerInfo.cs  IEvent.cs  PubSubEvent.cs
Tum4ik.EventAggregator/Extensions/: ServiceCollectionExtensions.cs
Tum4ik.JCM/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.txt  Tum4ik.JCM.csproj  Usings.cs  app.manifest
Tum4ik.JCM/Controls/: AppBarNavigationViewItem.xaml  AppBarNavigationViewItem.xaml.cs  AppNavigationView.cs  ClipTypeDataTemplateSelector.cs  PageNavigationViewItem.cs
Tum4ik.JCM/Exceptions/: PluginLoadingException.cs  (+1 more)
Tum4ik.JustClipboardManager/: App.config  App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.txt  Tum4ik.JustClipboardManager.csproj  Usings.cs  app.manifest  appsettings.development.json  appsettings.json  appsettings.uitest.json
Tum4ik.JustClipboardManager.COMImplementations/: Tum4ik.JustClipboardManager.COMImplementations.csproj
Tum4ik.JustClipboardManager.Icons/: SvgIcon.cs  SvgIconResourceAttribute.cs  SvgIconType.cs  Tum4ik.JustClipboardManager.Icons.csproj
Tum4ik.JustClipboardManager.Interfaces/: Tum4ik.JustClipboardManager.Interfaces.csproj
Tum4ik.SorceGenerators/: StaticClassInterfaceAndImplementationGenerator.cs  Tum4ik.SorceGenerators.csproj
YTSoft.JustClipboardManager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  YTSoft.JustClipboardManager.csproj  app.manifest
dotnet/: JustClipboardManager.sln
electron/: forge.config.ts  main.ts  preload.ts
scripts/: electron-serve.ps1  electron.ps1  prod-electron-forge-make.ps1  publish-listener.ps1
src/: index.html  main.ts  styles.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: clip-preview-window.json  default.json  main-window.json  paste-window.json
src-tauri/config/: .gitignore  default.toml
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_listener.rs  commands.rs  constants.rs  helpers.rs  lib.rs  main.rs  sentry_commands.rs
src-tauri/src/commands/: autostart.rs  copy_text_to_clipboard.rs  environment.rs  extract_and_remove_zip.rs  get_caret_position.rs  get_foreground_window.rs  info.rs  is_shortcut_registered.rs  open_main_window.rs  paste_clip.rs  save_data_objects_and_get_representation_bytes.rs  update_clip.rs
src-tauri/src/helpers/: database.rs
src-tauri/src/migrations/: mod.rs  v1.rs
src-tauri/windows/: hooks.nsh
(+642 files in other folders)
