[package]
name = "just-clipboard-manager"
version = "4.0.0"
description = "Just a clipboard manager"
authors = ["Yevheniy Tymchishin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "just_clipboard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.0"
windows = { version = "0.59", features = [
  "Win32_System_DataExchange",
  "Win32_UI_WindowsAndMessaging",
] }
clipboard-win = { version = "5.4.0", features = [] }
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
