[package]
name = "just-clipboard-manager"
version = "4.0.0-dev"
description = "Just a clipboard manager"
authors = ["Yevheniy Tymchishin"]
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "just_clipboard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
windows = { version = "0.60", features = [
  "Win32_System_DataExchange",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
] }
clipboard-win = { version = "5.4.0", features = [] }
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
config = "0.15.8"
sentry = "0.36.0"
machine-uid = "0.5.3"
log = "0.4"
tauri-plugin-log = { version = "2", features = ["colored"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
zip = "2.6.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
