[package]
name = "just-clipboard-manager"
version = "4.0.1"
description = "A powerful, extensible, open-source clipboard manager designed for efficiency and seamless clipboard history management."
authors = ["Yevheniy Tymchishin <timchishinevgeniy@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/Tum4ik/just-clipboard-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
split-debuginfo = "packed"
strip = true

[profile.release]
debug = true
split-debuginfo = "packed"
strip = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "just_clipboard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
windows = { version = "0.62", features = [
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
clipboard-win = { version = "5", features = [] }
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
config = "0.15"
sentry = "0.46"
machine-uid = "0.5"
log = "0.4"
tauri-plugin-log = { version = "2", features = ["colored"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
zip = "7"
lzma-rust2 = "0.15.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
